--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,37 @@
 asgiref==3.2.3
+awsebcli==3.17.1
+botocore==1.14.17
+cement==2.8.2
 certifi==2019.11.28
 chardet==3.0.4
-Django==3.0.2
+colorama==0.3.9
+Django==2.2.1
 django-bootstrap==0.2.4
 django-bootstrap3==12.0.3
 django-filter==2.2.0
-django-tables2==2.2.1
-django-tables3==0.14.1
 djangorestframework==3.11.0
-gspread==3.2.0
+docutils==0.15.2
+future==0.16.0
+gspread==3.3.0
 httplib2==0.17.0
-idna==2.9
+idna==2.7
+jmespath==0.9.5
 Markdown==3.2
 oauth2client==4.1.3
+pathspec==0.5.9
+psycopg2==2.8.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pypiwin32==223
+python-dateutil==2.8.0
 pytz==2019.3
-requests==2.23.0
+pywin32==227
+PyYAML==5.2
+requests==2.20.1
 rsa==4.0
-six==1.14.0
+semantic-version==2.5.0
+six==1.11.0
 sqlparse==0.3.0
-urllib3==1.25.8
+termcolor==1.1.0
+urllib3==1.24.3
+wcwidth==0.1.8
