--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.5.4
+asgiref==3.2.10
 async-timeout==3.0.1
 attrs==19.1.0
 cachetools==4.0.0
@@ -7,7 +8,7 @@ cffi==1.14.0
 chardet==3.0.4
 cryptography==2.8
 decorator==4.4.1
-Django==2.1.5
+Django==3.1.1
 django-bootstrap3==11.0.0
 django-extensions==3.0.9
 django-filter==2.2.0
@@ -34,11 +35,12 @@ pyasn1-modules==0.2.8
 pycparser==2.19
 pygsheets==2.0.3
 python-telegram-bot==12.4.2
-pytz==2018.9
+pytz==2020.1
 requests==2.20.1
 requests-oauthlib==1.3.0
 rsa==4.0
 six==1.11.0
+sqlparse==0.3.1
 tornado==6.0.3
 uritemplate==3.0.1
 urllib3==1.24.1
