--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ chardet==3.0.4
 cryptography==2.8
 decorator==4.4.1
 Django==3.1.1
-django-bootstrap3==11.0.0
+django-bootstrap3==14.1.0
 django-extensions==3.0.9
 django-filter==2.2.0
 djangorestframework==3.11.0
@@ -21,6 +21,7 @@ google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.1
 httplib2==0.17.0
 idna==2.7
+importlib-metadata==1.7.0
 Jinja2==2.10
 Markdown==3.2
 MarkupSafe==1.1.0
@@ -47,3 +48,4 @@ urllib3==1.24.1
 virtualenv==16.7.9
 vk-api==11.3.0
 yarl==1.3.0
+zipp==3.1.0
